--- a/.pypirc
+++ b/.pypirc
@@ -1,6 +1,12 @@
 [distutils]
-index-servers=pypi
+index-servers =
+    pypi
+    test
 
 [pypi]
-repository = https://upload.pypi.org/legacy/
-username = MatthewMoisen
+repositroy: https://upload.pypi.org/legacy/
+username: MatthewMoisen
+
+[test]
+repository: https://testpypi.python.org/pypi/
+username: MatthewMoisen
