adding timestamps and wals

--- a/.pypirc
+++ b/.pypirc
@@ -4,7 +4,7 @@ index-servers =
     test
 
 [pypi]
-repositroy: https://upload.pypi.org/legacy/
+repository: https://upload.pypi.org/legacy/
 username: MatthewMoisen
 
 [test]
